...
    <string name="waiting_for_confirmation">oczekuje na potwierdzenie</string>
    <string name="waiting_to_be_sent">oczekuje na wysłanie</string>

    <string name="alert">Uwaga</string>
    <string name="status_change_message">Czy na pewno chcesz zmienić status odcinka?</string>
    <string name="back">Cofnij</string>
    <string name="ok">OK</string>

    <string name="negative_points_message">Liczba punktów nie może być mniejsza od zera</string>
    <string name="too_many_points_message">Liczba punktów nie może być większa niż 100</string>
    <string name="mountain_range_error_message">Nie ma takiego pasma górskiego</string>
    <string name="confirm_cancel_message">Czy na pewno chcesz anulować?</string>
    <string name="no_point_set_message">Odcinek musi mieć punkt początkowy i końcowy</string>
...
    <string name="save_route">Zapisz trasę</string>
    <string name="points_sum">Suma punktów:</string>

    <string name="pick_proof_image">Wybierz obraz dowodu</string>
    <string name="image_not_selected">Nie udało się wybrać obrazu</string>
    <string name="delete">Usuń</string>
    <string name="edit_proofs">Edytuj dowody</string>
    <string name="send_to_leader">Wyślij do potwierdzenia</string>
    <string name="see_proofs">Zobacz dowody</string>
    <string name="delete_proofs">Usuń dowód</string>
    <string name="add_image">Dodaj zdjęcie</string>
    <string name="add_leader">Dodaj dane przodownika</string>
    <string name="id_no">Numer legitymacji:</string>
    <string name="id_no_undecorated">Numer legitymacji</string>
    <string name="leader">Przodownik:</string>
    <string name="leader_undecorated">Przodownik</string>
    <string name="name_and_surname">Imię i nazwisko:</string>
    <string name="include_image">Załącz obraz</string>
    <string name="choose_image">Wybierz obraz</string>
    <string name="mountain_passes">Odcinki</string>
    <string name="mountain_passes_decorated">Odcinki:</string>
    <string name="close">Zamknij</string>
    <string name="leader_already_added_message">Dla tej trasy załączono już dane przodownika</string>
    <string name="leader_not_found_message">Nie znaleziono przodownika o takim numerze legitymacji</string>
    <string name="no_proofs_message">Dla tej trasy nie załączono dowodu</string>
    <string name="no_proof_selected_message">Wybierz dowód do usunięcia</string>
    <string name="confirm_delete_message">Czy na pewno chcesz usunąć dowód?</string>
    <string name="not_send">oczekuje na wysłanie</string>
...
    <string name="to_confirm">Do potwierdzenia:</string>
    <string name="route_sections">Odcinki trasy</string>
    <string name="no_section_without_proof">Wszystkie odcinki tej trasy mają już dowody!</string>
    <string name="confirm_send_to_leader_message">Czy na pewno chcesz wysłać trasę do potwierdzenia?</string>
    <string name="confirm_route_confirmation_message">Czy na pewno chcesz potwierdzić tę trasę?</string>
    <string name="confirm_route_rejection_message">Czy na pewno chcesz odrzucić tę trasę?</string>
    <string name="confirm_route">Potwierdź</string>
    <string name="reject_route">Odrzuć</string>
    <string name="show_proofs">Pokaż dowody</string>
    <string name="show_on_map">Pokaż na mapie</string>
    <string name="show_mountain_passes">Pokaż odcinki</string>
    <string name="confirm_route_title">Potwierdź trasę</string>
    <string name="routes_to_confirm">Trasy do potwierdzenia:</string>
    <string name="proof_image_description">Zdjęcie przedstawiające dowód przebycia trasy załączony przez turystę</string>

</resources>
