<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/saveRouteAddProof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_route_add_proof_use_case"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmRoute" />

    <Button
        android:id="@+id/mountainPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mountain_pass_use_case"
        app:layout_constraintBottom_toTopOf="@+id/confirmRoute"
        app:layout_constraintLeft_toLeftOf="@id/saveRouteAddProof"
        app:layout_constraintRight_toRightOf="@id/saveRouteAddProof"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmRoute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_route_use_case"
        app:layout_constraintBottom_toTopOf="@+id/saveRouteAddProof"
        app:layout_constraintLeft_toLeftOf="@id/saveRouteAddProof"
        app:layout_constraintRight_toRightOf="@id/saveRouteAddProof"
        app:layout_constraintTop_toBottomOf="@+id/mountainPass" />

</androidx.constraintlayout.widget.ConstraintLayout>